--- a/_config.yml
+++ b/_config.yml
@@ -19,8 +19,8 @@ description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
-baseurl: "thefullstackroad.com/" # the subpath of your site, e.g. /blog
-url: "" 
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "thefullstackroad.com" 
 twitter_username: yurireeis
 github_username:  yurireeis
 
