--- a/_config.yml
+++ b/_config.yml
@@ -16,9 +16,7 @@
 title: The Fullstack Road 
 email: yuri.reis@msn.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  ~ A trilha de um futuro FullStack Developer ~
 baseurl: "" # the subpath of your site, e.g. /blog
 url: ""
 twitter_username: yurireeis
